force-app/main/default/objects/ATR_Question__c/ATR_Question__c.object-meta.xml
<CustomObject>
    <label>ATR Question</label>
    <nameField>
        <displayFormat>ATR Question-{0000}</displayFormat>
        <label>ATR Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATR Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>