force-app/main/default/objects/ATR_Question__c/fields/ATR_Template__c.field-meta.xml
<CustomField>
    <fullName>ATR_Template__c</fullName>
    <label>ATR Template</label>
    <referenceTo>ATR_Template__c</referenceTo>
    <relationshipLabel>ATR Questions</relationshipLabel>
    <relationshipName>ATR_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>