force-app/main/default/objects/ATR_Question__c/fields/Maximum_Score__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Score__c</fullName>
    <label>Maximum Score</label>
    <summarizedField>ATR_Choice__c.Score__c</summarizedField>
    <summaryForeignKey>ATR_Choice__c.ATR_Question__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>