force-app/main/default/objects/ATR_Question__c/fields/Minimum_Score__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Score__c</fullName>
    <label>Minimum Score</label>
    <summarizedField>ATR_Choice__c.Score__c</summarizedField>
    <summaryForeignKey>ATR_Choice__c.ATR_Question__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>