force-app/main/default/objects/ATR_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Minimum_Score__c</columns>
    <columns>Maximum_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>